--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,10 @@
 name: Pull Request
 
 on:
+  push:
+    branches:
+      - main
+      - temp
   pull_request:
     branches:
       - main
@@ -30,18 +34,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Cache pip files
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{runner.os}}-${{env.CACHE_PIP_DEPS}}-${{env.PYTHON_VERSION}}
-
-      - name: Cache npm files
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{runner.os}}-${{env.CACHE_NPM_DEPS}}-${{hashFiles('package-lock.json')}}
-
       - name: Use Python ${{env.PYTHON_VERSION}}
         uses: actions/setup-python@v2
         with:
@@ -49,6 +41,13 @@ jobs:
 
       - name: Upgrade pip
         run: python -m pip install -U pip
+
+      - name: Install Dependencies
+        uses: ./.github/actions/install-dependencies
+        id: install-dependencies
+        with:
+          install_python_dependencies: true
+          install_npm_dependencies: true
 
       - name: Build VSIX
         uses: ./.github/actions/build-vsix
