--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "theme": "dark"
     },
     "engines": {
-        "vscode": "^1.48.0"
+        "vscode": "^1.50.0"
     },
     "keywords": [
         "jupyter",
@@ -46,6 +46,7 @@
         "Notebooks"
     ],
     "activationEvents": [
+        "*",
         "onLanguage:python",
         "onLanguage:jupyter",
         "onCommand:jupyter.viewOutput",
@@ -68,7 +69,10 @@
         "onCommand:jupyter.selectJupyterInterpreter",
         "onCommand:jupyter.selectjupytercommandline",
         "onNotebook:jupyter-notebook",
-        "onCustomEditor:jupyter.notebook.ipynb"
+        "onCustomEditor:jupyter.notebook.ipynb",
+        "onView:notebookMetadataOutline",
+        "onView:remoteJupyter",
+        "onView:notebook.metadataEditor"
     ],
     "main": "./out/client/extension",
     "contributes": {
@@ -76,7 +80,7 @@
             {
                 "command": "jupyter.execSelectionInteractive",
                 "key": "shift+enter",
-                "when": "editorTextFocus && editorLangId == python && !findInputFocussed && !replaceInputFocussed && jupyter.ownsSelection && !notebookEditorFocused"
+                "when": "editorTextFocus && !findInputFocussed && !replaceInputFocussed && jupyter.ownsSelection && !notebookEditorFocused"
             },
             {
                 "command": "jupyter.runcurrentcelladvance",
@@ -255,6 +259,11 @@
             {
                 "command": "jupyter.switchOffInsidersChannel",
                 "title": "%jupyter.command.jupyter.switchOffInsidersChannel.title%",
+                "category": "Jupyter"
+            },
+            {
+                "command": "openRemote",
+                "title": "Go Open",
                 "category": "Jupyter"
             },
             {
@@ -629,6 +638,11 @@
                 "category": "Jupyter"
             },
             {
+                "command": "jupyter.createnewremotenotebook",
+                "title": "Create New Blank Remote Jupyter Notebook",
+                "category": "Jupyter"
+            },
+            {
                 "command": "jupyter.scrolltocell",
                 "title": "%jupyter.command.jupyter.scrolltocell.title%",
                 "category": "Jupyter"
@@ -675,57 +689,66 @@
                 "command": "jupyter.clearSavedJupyterUris",
                 "title": "%jupyter.command.jupyter.clearSavedJupyterUris.title%",
                 "category": "Jupyter"
+            },
+            {
+                "command": "jupyter.addRemoteServer",
+                "title": "Add Server",
+                "category": "Jupyter",
+                "icon": {
+                    "light": "resources/light/un-trusted.svg",
+                    "dark": "resources/dark/un-trusted.svg"
+                }
             }
         ],
         "menus": {
             "editor/context": [
                 {
-                    "when": "editorFocus && editorLangId == python && jupyter.hascodecells && !notebookEditorFocused",
+                    "when": "editorFocus && jupyter.hascodecells && !notebookEditorFocused",
                     "command": "jupyter.runallcells",
                     "group": "Jupyter2"
                 },
                 {
-                    "when": "editorFocus && editorLangId == python && jupyter.hascodecells && !notebookEditorFocused",
+                    "when": "editorFocus && jupyter.hascodecells && !notebookEditorFocused",
                     "command": "jupyter.runcurrentcell",
                     "group": "Jupyter2"
                 },
                 {
-                    "when": "editorFocus && editorLangId == python && jupyter.hascodecells && !notebookEditorFocused",
+                    "when": "editorFocus && jupyter.hascodecells && !notebookEditorFocused",
                     "command": "jupyter.runcurrentcelladvance",
                     "group": "Jupyter2"
                 },
                 {
                     "command": "jupyter.runFileInteractive",
                     "group": "Jupyter2",
-                    "when": "editorFocus && editorLangId == python && !notebookEditorFocused"
+                    "when": "editorFocus && !notebookEditorFocused"
                 },
                 {
                     "command": "jupyter.runfromline",
                     "group": "Jupyter2",
-                    "when": "editorFocus && editorLangId == python && jupyter.ownsSelection && !notebookEditorFocused"
+                    "when": "editorFocus && jupyter.ownsSelection && !notebookEditorFocused"
                 },
                 {
                     "command": "jupyter.runtoline",
                     "group": "Jupyter2",
-                    "when": "editorFocus && editorLangId == python && jupyter.ownsSelection && !notebookEditorFocused"
+                    "when": "editorFocus && jupyter.ownsSelection && !notebookEditorFocused"
                 },
                 {
                     "command": "jupyter.execSelectionInteractive",
                     "group": "Jupyter2",
-                    "when": "editorFocus && editorLangId == python && jupyter.ownsSelection && !notebookEditorFocused"
+                    "when": "editorFocus && jupyter.ownsSelection && !notebookEditorFocused"
                 },
                 {
-                    "when": "editorFocus && editorLangId == python && resourceLangId == jupyter && !notebookEditorFocused",
+                    "when": "editorFocus && resourceLangId == jupyter && !notebookEditorFocused",
                     "command": "jupyter.importnotebook",
                     "group": "Jupyter3@1"
                 },
                 {
-                    "when": "editorFocus && editorLangId == python && jupyter.hascodecells && !notebookEditorFocused",
+                    "when": "editorFocus && jupyter.hascodecells && !notebookEditorFocused",
                     "command": "jupyter.exportfileasnotebook",
                     "group": "Jupyter3@2"
                 },
                 {
-                    "when": "editorFocus && editorLangId == python && jupyter.hascodecells && !notebookEditorFocused",
+                    "when": "editorFocus && jupyter.hascodecells && !notebookEditorFocused",
                     "command": "jupyter.exportfileandoutputasnotebook",
                     "group": "Jupyter3@3"
                 }
@@ -1225,6 +1248,13 @@
                     "group": "1_view",
                     "when": "python.isDebuggerDataViewerExperimentEnabled && debugProtocolVariableMenuContext == 'viewableInDataViewer'"
                 }
+            ],
+            "view/title": [
+                {
+                    "command": "jupyter.addRemoteServer",
+                    "when": "view == jupyter.remoteServer",
+                    "group": "navigation@1"
+                }
             ]
         },
         "configuration": {
@@ -1685,6 +1715,36 @@
                 ]
             }
         ],
+        "viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "jupyter",
+                    "title": "Jupyter",
+                    "icon": "resources/jupyter.svg"
+                }
+            ]
+        },
+        "views": {
+            "jupyter": [
+                {
+                    "id": "notebookMetadataOutline",
+                    "name": "Notebook Metadata",
+                    "icon": "resources/jupyter.svg",
+                    "contextualTitle": "Notebook Metadata"
+                },
+                {
+                    "type": "webview",
+                    "id": "notebook.metadataEditor",
+                    "name": "Notebook Metadata"
+                },
+                {
+                    "id": "jupyter.remoteServer",
+                    "name": "Remote",
+                    "icon": "resources/jupyter.svg",
+                    "contextualTitle": "Remote Jupyter"
+                }
+            ]
+        },
         "notebookProvider": [
             {
                 "viewType": "jupyter-notebook",
@@ -1896,7 +1956,7 @@
         "@types/tmp": "0.0.33",
         "@types/untildify": "^3.0.0",
         "@types/uuid": "^3.4.3",
-        "@types/vscode": "^1.47.0",
+        "@types/vscode": "^1.50.0",
         "@types/webpack-bundle-analyzer": "^2.13.0",
         "@types/winreg": "^1.2.30",
         "@types/ws": "^6.0.1",
