--- a/.github/workflows/assignIssue.yml
+++ b/.github/workflows/assignIssue.yml
@@ -2,6 +2,10 @@ name: Assign DS issue to someone
 on:
   issues:
     types: [opened, labeled]
+
+env:
+  NODE_VERSION: 12.15.0
+
 jobs:
   assignIssue:
     name: Assign Issue to Someone
