--- a/package.json
+++ b/package.json
@@ -1265,6 +1265,7 @@
                         "enum": [
                             "NativeNotebookEditor",
                             "CustomEditor",
+                            "LongRunningKernels",
                             "All"
                         ]
                     },
@@ -1278,6 +1279,7 @@
                         "enum": [
                             "NativeNotebookEditor",
                             "CustomEditor",
+                            "LongRunningKernels",
                             "All"
                         ]
                     },
@@ -1805,10 +1807,12 @@
         "ansi-to-html": "^0.6.7",
         "ansi-to-react": "^6.0.8",
         "arch": "^2.1.0",
+        "body-parse": "^0.1.0",
         "bootstrap": "^4.3.1",
         "bootstrap-less": "^3.3.8",
         "detect-indent": "^6.0.0",
         "diff-match-patch": "^1.0.0",
+        "express": "^4.17.1",
         "fast-deep-equal": "^2.0.1",
         "font-awesome": "^4.7.0",
         "fs-extra": "^4.0.3",
@@ -1848,6 +1852,8 @@
         "sanitize-filename": "^1.6.3",
         "semver": "^5.5.0",
         "slickgrid": "^2.4.17",
+        "socket.io": "^3.0.3",
+        "socket.io-client": "^3.0.3",
         "stack-trace": "0.0.10",
         "string-argv": "^0.3.1",
         "strip-ansi": "^5.2.0",
@@ -1969,7 +1975,6 @@
         "eslint-plugin-react": "^7.20.3",
         "eslint-plugin-react-hooks": "^4.0.0",
         "expose-loader": "^0.7.5",
-        "express": "^4.17.1",
         "fast-xml-parser": "^3.16.0",
         "file-loader": "^5.1.0",
         "flat": "^4.0.0",
@@ -2010,7 +2015,6 @@
         "rewiremock": "^3.13.0",
         "rimraf": "^3.0.2",
         "sinon": "^8.0.1",
-        "socket.io": "^2.3.0",
         "source-map-support": "^0.5.12",
         "style-loader": "^0.23.1",
         "svg-inline-loader": "^0.8.0",
