--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -354,9 +354,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jupyter: [raw, local]
-        python: [nonConda, conda]
-        pythonVersion: ['3.9', '3.10']
+        jupyter: [raw]
+        python: [nonConda]
+        pythonVersion: ['3.9']
         # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
         # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
         os: [ubuntu-latest]
@@ -378,26 +378,26 @@ jobs:
             pythonVersion: '3.9'
             os: ubuntu-latest
             webOrDesktop: 'web'
-          - jupyter: raw
-            python: noPython
-            os: ubuntu-latest
-          - jupyter: raw
-            python: nonConda
-            pythonVersion: '3.10'
-            os: windows-latest
-          - jupyter: local
-            python: nonConda
-            pythonVersion: '3.9'
-            os: ubuntu-latest
-            packageVersion: 'prerelease'
-          - jupyter: raw
-            python: nonConda
-            pythonVersion: '3.9'
-            os: ubuntu-latest
-            packageVersion: 'prerelease'
-        exclude:
-          - python: conda # Conda does't seem to support 3.10 yet.
-            pythonVersion: '3.10'
+        #   - jupyter: raw
+        #     python: noPython
+        #     os: ubuntu-latest
+        #   - jupyter: raw
+        #     python: nonConda
+        #     pythonVersion: '3.10'
+        #     os: windows-latest
+        #   - jupyter: local
+        #     python: nonConda
+        #     pythonVersion: '3.9'
+        #     os: ubuntu-latest
+        #     packageVersion: 'prerelease'
+        #   - jupyter: raw
+        #     python: nonConda
+        #     pythonVersion: '3.9'
+        #     os: ubuntu-latest
+        #     packageVersion: 'prerelease'
+        # exclude:
+        #   - python: conda # Conda does't seem to support 3.10 yet.
+        #     pythonVersion: '3.10'
         #   - pythonVersion: '3.9'
         #     python: nonConda
         #     jupyter: raw
