--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -77,7 +77,7 @@ jobs:
       test_matrix_os: ${{ env.test_matrix_os }}
       release_channel: ${{ env.release_channel }}
       package_command: ${{ env.package_command }}
-    if: github.repository == 'microsoft/vscode-jupyter'
+    # if: github.repository == 'microsoft/vscode-jupyter'
     steps:
       - name: dump_event
         uses: crazy-max/ghaction-dump-context@v1
@@ -347,7 +347,7 @@ jobs:
   vscodeTests:
     name: Tests # These tests run with Python extension & real Jupyter
     runs-on: ${{ matrix.os }}
-    if: github.repository == 'microsoft/vscode-jupyter'
+    # if: github.repository == 'microsoft/vscode-jupyter'
     env:
       VSC_PYTHON_FORCE_LOGGING: 1
       VSC_JUPYTER_CI_RUN_NON_PYTHON_NB_TEST: 1
