--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -77,7 +77,7 @@ jobs:
       test_matrix_os: ${{ env.test_matrix_os }}
       release_channel: ${{ env.release_channel }}
       package_command: ${{ env.package_command }}
-    if: github.repository == 'microsoft/vscode-jupyter'
+    # if: github.repository == 'microsoft/vscode-jupyter'
     steps:
       - name: dump_event
         uses: crazy-max/ghaction-dump-context@v1
