--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -63,9 +63,14 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+    - run: ${{ github.action_path }}/install-azure-cli.sh
+      shell: bash
 
     - run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+        az --version
+
+    # - run: |
+    #     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
     - uses: azure/login@v1
       with:
