--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -292,7 +292,7 @@ jobs:
         # When installing pre-release versions, we're only focused on jupyter & related packages.
         # Not pre-release versions of pandas, numpy or other such packages that are not core to Jupyter.
         packageVersion: ['']
-        tags: ['^[^@]+$|@mandatory', '@kernel|@python', '@widgets', '@iw', '@webview', '@export', '@debugger']
+        tags: ['^[^@]+$|@mandatory', '@kernel|^kernelPicker', '@widgets', '@iw', '@webview|@export', '@debugger', '@kernelPicker|@python|@jupyter']
         # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
         # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
         os: [ubuntu-latest]
@@ -306,6 +306,12 @@ jobs:
             webOrDesktop: 'desktop'
             os: ubuntu-latest
             tags: '^[^@]+$|@mandatory'
+          - jupyter: remote # We don't care how remote is started (we only want to test connecting to it)
+            python: python
+            pythonVersion: '3.10'
+            webOrDesktop: 'desktop'
+            os: ubuntu-latest
+            tags: '@kernelPicker'
           - jupyter: remote # We don't care how remote is started (we only want to test connecting to it)
             python: python
             pythonVersion: '3.10'
