--- a/package.json
+++ b/package.json
@@ -2044,6 +2044,8 @@
         "@jupyterlab/coreutils": "5.1.17",
         "@jupyterlab/nbformat": "3.1.17",
         "@jupyterlab/services": "6.1.17",
+        "@jupyterlite/contents": "^0.1.2",
+        "@jupyterlite/kernel": "^0.1.2",
         "@lumino/widgets": "^1.28.0",
         "@nteract/messaging": "^7.0.0",
         "@vscode/extension-telemetry": "^0.7.7",
@@ -2053,6 +2055,7 @@
         "ansi-to-html": "^0.6.7",
         "bootstrap": "^4.3.1",
         "bootstrap-less": "^3.3.8",
+        "commlink": "^0.2.3",
         "cross-fetch": "^3.1.5",
         "decompress-response": "^4.2.0",
         "encoding": "^0.1.13",
@@ -2073,6 +2076,7 @@
         "pdfkit": "^0.13.0",
         "pidtree": "^0.6.0",
         "portfinder": "^1.0.25",
+        "pyodide": "^0.23.4",
         "re-resizable": "~6.5.5",
         "react": "^16.5.2",
         "react-data-grid": "^6.0.2-0",
